tests/testcases/errors/BCE0132-2.boo
"""
BCE0132-2.boo(9,8): BCE0132: The namespace 'Foo.Bar' already contains a definition for 'A'.
"""
namespace Foo.Bar

class A:
	pass
	
struct A:
	pass
